@@ -18,6 +18,7 @@ DIST grsecurity-sources-extras-4.9.67.tar.xz 2823248 SHA256 9625dfdfd3134b002401
 DIST grsecurity-sources-extras-4.9.68.tar.xz 2845624 SHA256 b92794fe0eed486cc52fd23a45107795be3375d47bba57dbba32b6a87adb71c7 SHA512 21b745a2ba5ba435197696b97128a0febba100022846db1412d3859a90f452f5c9251d8fc1f6674fdb9d28c28648e0b5d5a816bc37adaa61252b4ae23a0b5829 WHIRLPOOL 47ef9767b4c15c05c0bd40c67d235e3649ac27a69dbc7a977760dd188d8d92909fda9b225baa3a7a24e2999666e4474cfc4fd9c19d57f2ff2991503e3af28e0e
 DIST grsecurity-sources-extras-4.9.72.tar.xz 2941800 SHA256 bdf2c99a6bff38f1f03ec4bd98596786190e79d527f86ae2f6640d58b0857063 SHA512 653ce99d233763bb4b3e69737f3a92ea42c6cdca6cfde6ac19808a9a92afd9af4d17d33724c221ece921260aa6061bcdaf52a1830ec4d018d37de6476606312c WHIRLPOOL fe97784e83558fa6cd4494d9e7e561dd2d7f90cc7aff77c8f3dcbcd61db0d24cc0067deaaa4dad44dacbf779b66d562beeff6b3ffb821732cfaa1a53525a993a
 DIST grsecurity-sources-extras-4.9.73.tar.xz 2946376 SHA256 7bb81ce02d5ae3a2ae41c8ad30aac1249a0a35f81fc48be40090a81f4d45875a SHA512 3529e3a78a53780ea10478e606870532d30715013460cea9ce082b3eb0cf1f9bf41133d61552636c387a2d7e5e8a1ef7ff0108627b88df266edade6a3235be57 WHIRLPOOL a5959e932c111881d255ffbacb3c28e999b17496057d399eae9d9156fcc7784d139997f7318d9dcf2949a29fef6bf68e5dff79814c10b8370c7c618271251c2b
+DIST grsecurity-sources-extras-4.9.74.tar.xz 2964768 SHA256 5c3e3ce7bdcb0f545bfcf278111e73bfb3b6bbd50ec259648111227f805cbb67 SHA512 07dae47eecb5cbcafc9787bd07e2d7f1954df65e6375d86fad2922da3809fac5ba688fd3a95912cb59b506f85c00624a1198bc6b3e599df94fc5f9b279253e7c WHIRLPOOL e48d250e2fab9ea039c14d3be46e3dea4d6255d3606df20604ee922b2baaefba333eae4d30708702046b5bf22adf5969f38bf06b61c991908b616be79e992f26
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
@@ -36,21 +37,22 @@ EBUILD grsecurity-sources-4.9.67.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8
 EBUILD grsecurity-sources-4.9.68.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.72.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.73.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 3481 SHA256 6b9278577050dd50b4c07b6cc760943322466b42d565717d36c496839249fc20 SHA512 c3021e64840a268bd6061129b071e1d192b1ac5a9b0771fe94c20780c06f528fbe0311853f1d2f8f7d3bd154e56efee32caf3008af328f2ff08e0ac07498df6f WHIRLPOOL 89b502e633b5d017799278cc15d275ebcbf79cb7cbec6b152b38227225d35fa71f11ea75b46b996b8cde9018899310495328cca7b0fbf7c71a3e74228f288057
+EBUILD grsecurity-sources-4.9.74.ebuild 1175 SHA256 96095b58056793ece859721d01ebbec5b9a9e6c79e731d19ec2f4007cbf4e114 SHA512 f5ff0aa4896bfa80d6341f53ad8f2f037fd5c17805fb79b0a850e81a7e0bc1fbb20b8717fa91395308b8b0549d824023cd947750b1da4f3f5e71736dbfd4bfca WHIRLPOOL c8cd5f8fe7abf5854884570a1eb526075215e5e29b00fee6e182675d8911770e045dd150cc6baf855ad9fef3900909bcb3ff55b77e8765ec44518e167cb13ed7
+MISC ChangeLog 3676 SHA256 bb6ddd22ae2c216925ff40642b075c32c416289bac412941b20377fd8fa7c599 SHA512 f479ab77f02ae312102baed002f29d64a3331511ad2af28665d6b0f6da6df0df4ef79bb6c9f796d8f55b28b4c9d6d184959f26ac8397d8ac37b1e86b7f6bde33 WHIRLPOOL 013019e75965f98510d9cdf0593398953475805a7fe1cb021fab776d701efbb9b2dedccd4a66b35bd7b0f7977acebefada93ee282882707f9c38216ac68f4b62
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlpI0PMACgkQunvTUHGU
-RZ/ocBAAtBJt0ZjDC8ppy3FeJmHJOr8qgMgxbkZITUgpHllpnG+8iLLoBVF9PCyJ
-bmoEToeDZ+cia9vRCCLXgKUar5VgYqxPw9PVInyYLl0yPSSW3rBNUAK3gBeOMPiY
-Ksq6QBX95VmuRwvv+9wW0GNJKKq+LQd9ZwyWTt5qhmjntGnQUUIA6NVrL3L+6jae
-pAKqdaQ3ywZJH7E6PdGtGE71BDOEXZWIggCvk9a7NG/ohd4gcK/XD0H8GY11LqK8
-819DaEqUwyqSJJNONEokMrkF4lOK8YjzrPj8VDNqYu3ZXcmL0ecgH/pCxbiCsJdy
-QPkp0uzf1fnyqFYr2bZTFEvC05Imj75GZr7brW4cafBHuKnX78ATtwegIoHYg4tn
-q27ZfEnQPMfqZGwKPTjEwARibnFC1kmm9bcWn1yZLOc6hhhTKbbR1B0YV4qX02+K
-00xpJl8/twDVoR9ofrUhWNm5fsizA+DShTGv6/Be0Gj2GJ1Gs3WVYM/5zmc3E1KJ
-oqr8T4kA+83OFvEWKlEG77cLGzW1hfd4ewQklqg4NfKRG93cpQq2pGQEroae73vY
-vviT9mxLfHUbM0ZbjAEySyAt3E5ENORcM5gll3nRoZuC4c6yaGcQnVa2x8iHS58j
-cL1paOWLmy2RpLBY3q9I0aJR5mvKDvSjTBCMzZPjxkBs4Aa9/Tc=
-=l5sM
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlpOWfIACgkQunvTUHGU
+RZ/i/w//ZohnoZV4gzdtLs2+wZkbEktB4TAkW7r1GDp+CWkwA8nwGGjaPJVsA1Uv
+U+9/ji1hnPpDNed0r+VWXQfEbDlYG5l1qn6kOfJ6hfR7cok448m1goEvp0x3X3Z5
++3zeMcl160JldDY541YnSY7gKskcs4WcHlRePE8fulJ67vV3wsUUX8q2Muzhsoz3
+zjAf3dEVTLETzImfNRclY63UgQrT1ZxdQHe9uq5TIa9tKyrkIVHniPmdJY+myIjD
+aaE4YKsN9aYza9HoRnT+k86tfIdHkk2VqiDBWHG7N31N0KVKcmzDBiwuOe1otRv/
+TQVCg+IFCDuhxUtOHSj/ntS2C8sFBbBFbfvPQ1wMv/57gcYgv5W6F4SLZFFBs74I
+2njoBj/fKunB10AylVXWozAKT0ShGZlJD69FFxw4PR61rQuyJ5l6JNSkQDC3d0/F
++t2Ch18h5kmBHQfjLQQX9a6JL6Jv45+H9lcmfmctWyYw0QN64dk548utL084ldpJ
+09+ZvCzm+TxB9bPhOSmKQb3rc+8fQaamaaB5Rduet++4QGIIVVdavAtHYbm+P7+Q
+KpmKOaGeIyNA57hDEETkQDaSN5rMSL8kUSpOvhT3BMUYt0IL0bhlYIWoteCdoe0c
+AKIs//gdyxNgWn4KjIdgrfMPqar86FKb05H3rZQRXCABrBxQU+8=
+=SkxG
 -----END PGP SIGNATURE-----
